--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "mini-css-extract-plugin": "^0.8.0",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.8"
+  },
+  "dependencies": {
+    "viewerjs": "^1.3.6"
   }
 }
