--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "webpack-cli": "^3.3.8"
   },
   "dependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "viewerjs": "^1.3.6"
