--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "webpack-cli": "^3.3.8"
   },
   "dependencies": {
+    "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
