fixing more ts things

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions":{
         "jsx":"react",
-        "noImplicitAny":true
+        "noImplicitAny":true,
+        "lib":["dom","es6"]
     },
     "include":[
         "*.ts",
