--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "mini-css-extract-plugin": "^0.8.2",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "@types/react": "^16.9.19"
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "react": "^16.12.0",
