--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,11 @@
     "compilerOptions":{
         "jsx":"react",
         "noImplicitAny":true,
-        "lib":["dom","es6"]
+        "lib":["dom","ESNext"]
     },
     "include":[
-        "*.ts",
         "**/*.ts",
         "**/*.d.ts",
-        "*.tsx",
         "**/*.tsx"
     ],
     "exclude":[
